Bug 470748 - breeze-settings5 Qt6 crashes on start
Summary: breeze-settings5 Qt6 crashes on start
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-07 13:41 UTC by Nicolas Fella
Modified: 2023-06-08 13:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-06-07 13:41:31 UTC
#0  QLayout::parentWidget (this=<optimized out>) at /usr/src/debug/qt6-qtbase-6.5.1-1.fc38.x86_64/src/widgets/kernel/qlayout.cpp:402
#1  0x00007ffff75f71b8 in QLayout::addChildWidget (this=<optimized out>, w=0x727e60) at /usr/src/debug/qt6-qtbase-6.5.1-1.fc38.x86_64/src/widgets/kernel/qlayout.cpp:839
#2  0x00007ffff75f739c in QLayout::addWidget (this=0x0, w=0x727e60) at /usr/src/debug/qt6-qtbase-6.5.1-1.fc38.x86_64/src/widgets/kernel/qlayout.cpp:189
#3  0x00007fffe15fb87e in Breeze::ConfigurationModule::ConfigurationModule (this=0x70f960, parent=<optimized out>, data=..., args=...) at /home/nico/kde6/src/breeze/kstyle/config/breezestyleconfigmodule.cpp:22
#4  0x00007fffe15fbba5 in KPluginFactory::createWithMetaDataInstance<Breeze::ConfigurationModule, QObject> (parent=<optimized out>, metaData=..., args=...) at /home/nico/kde6/usr/include/KF6/KCoreAddons/kpluginfactory.h:604
#5  0x00007ffff7f2bb0d in KPluginFactory::create<KCModule> (args=..., parent=0x6f9230, this=0x704930) at /home/nico/kde6/usr/include/KF6/KCoreAddons/kpluginfactory.h:632
#6  KPluginFactory::instantiatePlugin<KCModule> (data=..., parent=parent@entry=0x6f9230, args=...) at /home/nico/kde6/usr/include/KF6/KCoreAddons/kpluginfactory.h:381
#7  0x00007ffff7f2b1c2 in KCModuleLoader::loadModule (metaData=..., parent=parent@entry=0x6f9230, args=..., eng=std::shared_ptr<QQmlEngine> (empty) = {...}) at /usr/include/qt6/QtCore/qlist.h:123
#8  0x00007ffff7f30674 in KCMultiDialog::addModule (this=this@entry=0x7fffffffd410, metaData=..., args=...) at /home/nico/kde6/src/kcmutils/src/kcmultidialog.cpp:380
#9  0x0000000000401351 in main (argc=<optimized out>, argv=0x7fffffffd588) at /home/nico/kde6/src/breeze/kstyle/config/main.cpp:30
Comment 1 Bug Janitor Service 2023-06-07 14:19:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/320
Comment 2 Nicolas Fella 2023-06-08 13:37:44 UTC
Git commit 4f29c929df0f2bbbde37f4d87d936f6624794552 by Nicolas Fella.
Committed on 08/06/2023 at 13:01.
Pushed by nicolasfella into branch 'master'.

Add layout to KCM widget

Widgets don't have a layout by default, we need to add one before using one

M  +1    -0    kstyle/config/breezestyleconfigmodule.cpp

https://invent.kde.org/plasma/breeze/-/commit/4f29c929df0f2bbbde37f4d87d936f6624794552