Add layout to KCM widget

Widgets don't have a layout by default, we need to add one before using one

BUG: 470748